[package]
name = "serde_bson"
authors = ["Jordan D. <jordan@doyle.la>"]
description = "Fast bson serde implementation"
repository = "https://github.com/w4/serde_bson"
version = "0.0.1"
edition = "2018"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
bytes = "1"
itoa = "1.0"
simdutf8 = "0.1"
memchr = "2.7"
thiserror = "1"
bumpalo = { version = "3.16", features = ["collections"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
bson = "2.13"
criterion = "0.5"
rand = "0.8"
insta = "1.4"

[[bench]]
name = "serialize"
harness = false

[[bench]]
name = "deserialize"
harness = false
